# change

./: index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  player.rs  scanner.rs  state.rs
src/components/: AlbumGrid.tsx  ArtistList.tsx  PlayerBar.tsx  Sidebar.tsx  SongList.tsx
src/hooks/: usePlayer.ts
src/lib/: tauri.ts
