[package]
name = "change"
version = "0.1.0"
edition = "2021"

[lib]
name = "change_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
metaflac = "0.2"
base64 = "0.22"
symphonia = { version = "0.5", features = ["flac", "mp3", "isomp4", "wav", "ogg", "vorbis"] }
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }
